[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://music/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Enemy = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.388235, 0.470588, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 236, 370 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PointTimer" type="Timer" parent="."]

[node name="EnemiesTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PositionStart" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="PathEnemy" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnEnemy" type="PathFollow2D" parent="PathEnemy"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 241, 448 )
stream = ExtResource( 5 )

[node name="DeathMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 449 )
stream = ExtResource( 6 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="start_game"]
[connection signal="timeout" from="PointTimer" to="." method="_on_PointTimer_timeout"]
[connection signal="timeout" from="EnemiesTimer" to="." method="_on_EnemiesTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
